--- a/tidyverse/other-packages/gt_covid_glawley.qmd
+++ b/tidyverse/other-packages/gt_covid_glawley.qmd
@@ -12,7 +12,7 @@ format: html
 library(tidyverse)
 library(gt)
 
-covid <- read_csv("data/covid.csv")
+covid <- read_csv("../data/covid.csv")
 ```
 
 
